--- a/bladedancer.html
+++ b/bladedancer.html
@@ -73,6 +73,21 @@
                                 <option value="12.5">12.5%</option>
                                 <option value="15">15%</option>
                             </select>
+                            <img src="/static/images/icons/4392.webp" alt="Exclusive Attack" style="margin-left: 8px;">
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" id="exclusiveAttackBonus">
+                                <label class="custom-control-label" for="exclusiveAttackBonus">10%</label>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center">
+                            <img src="/static/images/icons/4396.webp" alt="United Attack">
+                            <select id="unitedAttackBonus" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="6">6%</option>
+                                <option value="8">8%</option>
+                                <option value="10">10%</option>
+                                <option value="12">12%</option>
+                            </select>
                             <img src="/static/images/icons/3702.webp" alt="12% relic" style="margin-left: 8px;">
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="relicBonus">
@@ -208,6 +223,20 @@
                                 <option value="2">2%</option>
                                 <option value="4">4%</option>
                                 <option value="6">6%</option>
+                            </select>(II)
+                        </div>
+                        <div class="form-group">
+                            <img src="/static/images/icons/6887.webp" alt="Strike Onslaught (II)">
+                            <select id="strikeOnslaughtBonus" class="form-select">
+                                <option value="0">0%</option>
+                                <option value="2.5">2.5%</option>
+                                <option value="5">5%</option>
+                                <option value="7.5">7.5%</option>
+                                <option value="10">10%</option>
+                                <option value="12.5">12.5%</option>
+                                <option value="15">15%</option>
+                                <option value="17.5">17.5%</option>
+                                <option value="20">20%</option>
                             </select>(II)
                         </div>
                         <div class="form-group">
